# epitope_barcoding

./: .gitmodules  README.md  pyproject.toml
barcoding/: datamodel.py  datatype_handling.py  eTK078.ipynb  eTK078part1.ipynb  eTK078part2.ipynb  labeledarray.py  mi_align.py  seg_utils.py
barcoding/utils/: seg_utils.py
bootstrap/: bootstrap_refactor.py  stain.csv  wdict.npz
data/: livecell_celltk0.yml  livecell_celltk1.yml  ref_epi2n.fa  ref_n2k.fa
src/: align.py  dna2aa.py  seq_analysis.py  unmixing.py  utils.py
tests/: tests_align.py  tests_unmixing.py
