[tool.poetry]
name = "epitope_barcoding"
version = "0.1.0"
description = ""
authors = ["braysia <kudo@stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.20.2"
pysam = "^0.16.0"
scipy = "^1.7.3"
imageio = "^2.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
